--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/document-viewer": "^4.16.0",
     "@ionic-native/file-opener": "^4.16.0",
+    "@ionic-native/file-path": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.1",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "0.9.10",
     "cordova-plugin-file-opener2": "2.0.19",
+    "cordova-plugin-filepath": "1.4.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -58,9 +61,11 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-file-opener2": {}
+      "cordova-plugin-file-opener2": {},
+      "cordova-plugin-filepath": {}
     },
     "platforms": [
+      "ios",
       "android"
     ]
   }
