--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.1",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-document-viewer": "0.9.10",
-    "cordova-plugin-file-opener2": "2.0.19",
+    "cordova-plugin-document-viewer": "^0.9.10",
+    "cordova-plugin-file-opener2": "^2.0.19",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -61,7 +62,8 @@
       "cordova-plugin-file-opener2": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
