--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/document-viewer": "^4.16.0",
+    "@ionic-native/file": "^4.16.0",
+    "@ionic-native/file-chooser": "^4.16.0",
     "@ionic-native/file-opener": "^4.16.0",
     "@ionic-native/file-path": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
@@ -32,7 +34,9 @@
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "0.9.10",
+    "cordova-plugin-file": "6.0.1",
     "cordova-plugin-file-opener2": "2.0.19",
+    "cordova-plugin-filechooser": "1.0.1",
     "cordova-plugin-filepath": "1.4.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
@@ -62,7 +66,9 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file-opener2": {},
-      "cordova-plugin-filepath": {}
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "ios",
