--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/file-chooser": "^4.16.0",
     "@ionic-native/file-opener": "^4.16.0",
     "@ionic-native/file-path": "^4.16.0",
+    "@ionic-native/file-transfer": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
@@ -36,6 +37,7 @@
     "cordova-plugin-document-viewer": "^0.9.10",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-opener2": "^2.0.19",
+    "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-filechooser": "^1.0.1",
     "cordova-plugin-filepath": "^1.4.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -68,7 +70,8 @@
       "cordova-plugin-file-opener2": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-filechooser": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "ios",
