--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Teste",
+  "name": "Paulo Portfolio",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/call-number": "^4.16.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/document-viewer": "^4.16.0",
     "@ionic-native/file": "^4.16.0",
@@ -31,6 +32,7 @@
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
+    "call-number": "1.0.1",
     "cordova-android": "7.1.1",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
@@ -47,6 +49,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "mx.ferreyra.callnumber": "~0.0.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -71,11 +74,12 @@
       "cordova-plugin-filepath": {},
       "cordova-plugin-filechooser": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "mx.ferreyra.callnumber": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
