--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/file-opener": "^4.16.0",
     "@ionic-native/file-path": "^4.16.0",
     "@ionic-native/file-transfer": "^4.16.0",
+    "@ionic-native/sms": "^4.17.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
@@ -47,6 +48,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sms-plugin": "0.1.13",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "mx.ferreyra.callnumber": "~0.0.2",
@@ -75,11 +77,12 @@
       "cordova-plugin-filechooser": {},
       "cordova-plugin-file": {},
       "cordova-plugin-file-transfer": {},
-      "mx.ferreyra.callnumber": {}
+      "mx.ferreyra.callnumber": {},
+      "cordova-sms-plugin": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
