--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/file-opener": "^4.16.0",
     "@ionic-native/file-path": "^4.16.0",
     "@ionic-native/file-transfer": "^4.16.0",
+    "@ionic-native/flashlight": "^4.17.0",
     "@ionic-native/sms": "^4.17.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
@@ -36,6 +37,7 @@
     "call-number": "1.0.1",
     "cordova-android": "7.1.1",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "^0.9.10",
     "cordova-plugin-file": "^6.0.1",
@@ -43,6 +45,7 @@
     "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-filechooser": "^1.0.1",
     "cordova-plugin-filepath": "^1.4.2",
+    "cordova-plugin-flashlight": "3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -79,7 +82,8 @@
       "cordova-plugin-file": {},
       "cordova-plugin-file-transfer": {},
       "mx.ferreyra.callnumber": {},
-      "cordova-sms-plugin": {}
+      "cordova-sms-plugin": {},
+      "cordova-plugin-flashlight": {}
     },
     "platforms": [
       "ios",
