--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/call-number": "^4.16.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/document-viewer": "^4.16.0",
+    "@ionic-native/email-composer": "^4.17.0",
     "@ionic-native/file": "^4.16.0",
     "@ionic-native/file-chooser": "^4.16.0",
     "@ionic-native/file-opener": "^4.16.0",
@@ -40,6 +41,7 @@
     "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "^0.9.10",
+    "cordova-plugin-email-composer": "0.8.15",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-opener2": "^2.0.19",
     "cordova-plugin-file-transfer": "1.7.1",
@@ -83,7 +85,8 @@
       "cordova-plugin-file-transfer": {},
       "mx.ferreyra.callnumber": {},
       "cordova-sms-plugin": {},
-      "cordova-plugin-flashlight": {}
+      "cordova-plugin-flashlight": {},
+      "cordova-plugin-email-composer": {}
     },
     "platforms": [
       "ios",
